last exercice on progress

--- a/cpp04/ex00/Makefile
+++ b/cpp04/ex00/Makefile
@@ -6,11 +6,11 @@
 #    By: skapersk <skapersk@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/11 15:03:40 by skapersk          #+#    #+#              #
-#    Updated: 2024/08/12 20:14:52 by skapersk         ###   ########.fr        #
+#    Updated: 2024/08/17 19:35:30 by skapersk         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = Polymorphisme
+NAME = ex00
 
 CC = c++
 
