--- a/cpp04/ex03/Makefile
+++ b/cpp04/ex03/Makefile
@@ -6,7 +6,7 @@
 #    By: skapersk <skapersk@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/11 15:03:40 by skapersk          #+#    #+#              #
-#    Updated: 2024/08/17 22:54:16 by skapersk         ###   ########.fr        #
+#    Updated: 2024/08/20 18:17:06 by skapersk         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,12 +23,11 @@ SRC_DIR = sources/
 OBJ_DIR = objects/
 
 SRC = main.cpp \
-	  Dog.cpp \
-	  Cat.cpp \
-	  Animal.cpp \
-	  WrongCat.cpp \
-	  WrongAnimal.cpp \
-	  Brain.cpp \
+	  AMateria.cpp \
+	  Character.cpp \
+	  Cure.cpp \
+	  Ice.cpp \
+	  MateriaSource.cpp \
 
 OBJ = $(SRC:.cpp=.o)
 
