--- a/cpp05/ex02/Makefile
+++ b/cpp05/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: skapersk <skapersk@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/11 15:03:40 by skapersk          #+#    #+#              #
-#    Updated: 2024/08/26 16:58:29 by skapersk         ###   ########.fr        #
+#    Updated: 2024/09/17 15:12:58 by skapersk         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,7 +24,8 @@ OBJ_DIR = objects/
 
 SRC = main.cpp \
 	  Bureaucrat.cpp \
-	  Form.cpp \
+	  AForm.cpp \
+	  ShrubberyCreationForm.cpp \
 
 OBJ = $(SRC:.cpp=.o)
 
