cpp09 working on parsing input

--- a/cpp09/ex00/Makefile
+++ b/cpp09/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: skapersk <skapersk@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/11 15:03:40 by skapersk          #+#    #+#              #
-#    Updated: 2024/10/11 16:01:53 by skapersk         ###   ########.fr        #
+#    Updated: 2024/10/15 15:23:48 by skapersk         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,6 +24,7 @@ OBJ_DIR = objects/
 
 SRC = main.cpp \
 	  BitcoinExchange.cpp \
+	  BitcoinExchangeUtils.cpp \
 
 OBJ = $(SRC:.cpp=.o)
 
