--- a/cpp08/.vscode/settings.json
+++ b/cpp08/.vscode/settings.json
@@ -62,6 +62,7 @@
         "algorithm": "cpp",
         "list": "cpp",
         "deque": "cpp",
-        "*.tpp": "cpp"
+        "*.tpp": "cpp",
+        "stack": "cpp"
     }
 }
