--- a/cpp09/.vscode/settings.json
+++ b/cpp09/.vscode/settings.json
@@ -1,81 +1,55 @@
 {
-    "files.associations": {
-		"iosfwd": "cpp",
-		"ostream": "cpp",
+	"files.associations": {
+		"deque": "cpp",
 		"string": "cpp",
-		"__bit_reference": "cpp",
-		"__bits": "cpp",
-		"__config": "cpp",
-		"__debug": "cpp",
-		"__errc": "cpp",
-		"__hash_table": "cpp",
-		"__locale": "cpp",
-		"__mutex_base": "cpp",
-		"__node_handle": "cpp",
-		"__nullptr": "cpp",
-		"__split_buffer": "cpp",
-		"__string": "cpp",
-		"__threading_support": "cpp",
-		"__tree": "cpp",
-		"__tuple": "cpp",
+		"vector": "cpp",
 		"array": "cpp",
 		"atomic": "cpp",
-		"bitset": "cpp",
+		"bit": "cpp",
+		"*.tcc": "cpp",
 		"cctype": "cpp",
-		"chrono": "cpp",
 		"clocale": "cpp",
 		"cmath": "cpp",
 		"compare": "cpp",
-		"complex": "cpp",
 		"concepts": "cpp",
 		"cstdarg": "cpp",
 		"cstddef": "cpp",
 		"cstdint": "cpp",
 		"cstdio": "cpp",
 		"cstdlib": "cpp",
-		"cstring": "cpp",
 		"ctime": "cpp",
 		"cwchar": "cpp",
 		"cwctype": "cpp",
-		"deque": "cpp",
-		"exception": "cpp",
-		"fstream": "cpp",
-		"initializer_list": "cpp",
-		"iomanip": "cpp",
-		"ios": "cpp",
-		"iostream": "cpp",
-		"istream": "cpp",
-		"limits": "cpp",
-		"locale": "cpp",
+		"list": "cpp",
 		"map": "cpp",
+		"set": "cpp",
+		"unordered_map": "cpp",
+		"exception": "cpp",
+		"algorithm": "cpp",
+		"functional": "cpp",
+		"iterator": "cpp",
 		"memory": "cpp",
-		"mutex": "cpp",
-		"new": "cpp",
-		"optional": "cpp",
-		"ratio": "cpp",
-		"sstream": "cpp",
-		"stack": "cpp",
-		"stdexcept": "cpp",
-		"streambuf": "cpp",
+		"memory_resource": "cpp",
+		"numeric": "cpp",
+		"random": "cpp",
 		"string_view": "cpp",
 		"system_error": "cpp",
 		"tuple": "cpp",
 		"type_traits": "cpp",
-		"typeinfo": "cpp",
-		"unordered_map": "cpp",
-		"variant": "cpp",
-		"vector": "cpp",
-		"algorithm": "cpp",
-		"bit": "cpp",
-		"*.tcc": "cpp",
-		"list": "cpp",
-		"set": "cpp",
-		"functional": "cpp",
-		"iterator": "cpp",
-		"memory_resource": "cpp",
-		"numeric": "cpp",
-		"random": "cpp",
 		"utility": "cpp",
-		"numbers": "cpp"
+		"fstream": "cpp",
+		"initializer_list": "cpp",
+		"iomanip": "cpp",
+		"iosfwd": "cpp",
+		"iostream": "cpp",
+		"istream": "cpp",
+		"limits": "cpp",
+		"new": "cpp",
+		"numbers": "cpp",
+		"ostream": "cpp",
+		"sstream": "cpp",
+		"stdexcept": "cpp",
+		"streambuf": "cpp",
+		"typeinfo": "cpp"
 	}
 }
